--- a/Index.html
+++ b/Index.html
@@ -10,22 +10,33 @@
   </head>
   <body>
 
-  <div class="zero"></div>
-  <div class="one"></div>
-  <div class="two"></div>
-  <div class="three"></div>
-  <div class="four"></div>
-  <div class="five"></div>
-  <div class="six"></div>
-  <div class="seven"></div>
-  <div class="eight"></div>
-  <div class="nine"></div>
-  <div class="plus"></div>
-  <div class="minus"></div>
-  <div class="multi"></div>
-  <div class="divide"></div>
-  <div class="equal"></div>
-  <div class="answer"></div>
+  <div class="container">
+  	<div class="answer"><p></p></div>
+  	<div class="row">
+	  <div class="one"><p>1</p></div>
+	  <div class="two"><p>2</p></div>
+	  <div class="three"><p>3</p></div>
+  	</div>
+  	<div class="row">
+	  <div class="four"><p>4</p></div>
+	  <div class="five"><p>5</p></div>
+	  <div class="six"><p>6</p></div>
+  	</div>
+  	<div class="row">
+	  <div class="seven"><p>7</p></div>
+	  <div class="eight"><p>8</p></div>
+	  <div class="nine"><p>9</p></div>
+  	</div>
+  	<div class="col">
+	  <div class="plus"><p>+</p></div>
+	  <div class="minus"><p>-</p></div>
+	  <div class="multi"><p>*</p></div>
+	  <div class="divide"><p>/</p></div>
+	  <div class="equal"><p>=/C</p></div>	
+  	</div>
+  	<div class="zero"><p>0</p></div>
+  </div>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
