--- a/Index.html
+++ b/Index.html
@@ -11,30 +11,34 @@
   <body>
 
   <div class="container">
-  	<div class="answer"><p></p></div>
+  	<div class="answer"><h1>0</h1></div>
   	<div class="row">
-	  <div class="one"><p>1</p></div>
-	  <div class="two"><p>2</p></div>
-	  <div class="three"><p>3</p></div>
+	  <div class="one"><h2>1</h2></div>
+	  <div class="two"><h2>2</h2></div>
+	  <div class="three"><h2>3</h2></div>
   	</div>
   	<div class="row">
-	  <div class="four"><p>4</p></div>
-	  <div class="five"><p>5</p></div>
-	  <div class="six"><p>6</p></div>
+	  <div class="four"><h2>4</h2></div>
+	  <div class="five"><h2>5</h2></div>
+	  <div class="six"><h2>6</h2></div>
   	</div>
   	<div class="row">
-	  <div class="seven"><p>7</p></div>
-	  <div class="eight"><p>8</p></div>
-	  <div class="nine"><p>9</p></div>
+	  <div class="seven"><h2>7</h2></div>
+	  <div class="eight"><h2>8</h2></div>
+	  <div class="nine"><h2>9</h2></div>
+  	</div>
+  	
+  	<div class="col">
+	  <div class="multi"><h2>*</h2></div>
+	  <div class="divide"><h2>/</h2></div>
+	  <div class="equal"><h2>=/C</h2></div>	
   	</div>
   	<div class="col">
-	  <div class="plus"><p>+</p></div>
-	  <div class="minus"><p>-</p></div>
-	  <div class="multi"><p>*</p></div>
-	  <div class="divide"><p>/</p></div>
-	  <div class="equal"><p>=/C</p></div>	
+  	  <div class="zero"><h2>0</h2></div>
+	  <div class="plus"><h2>+</h2></div>
+	  <div class="minus"><h2>-</h2></div>
   	</div>
-  	<div class="zero"><p>0</p></div>
+
   </div>
 
 
