--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
   <body>
 
   <div class="container">
-  	<div class="answer"><h2></h2></div>
+  	<div class="answer"><input type="text" readonly id="display"></div>
   	<div class="row">
 	  <div class="seven" onclick="num('7')"><h2>7</h2></div>
 	  <div class="four" onclick="num('4')"><h2>4</h2></div>
